# RealTimeChallenge

./: README.md  docker-compose.mac.yaml  docker-compose.ubuntu.yaml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/api/: apis.py  consumers.py  models.py  urls.py
backend/app/api/migrations/: 0001_initial.py
backend/app/config/: asgi.py  settings.py  urls.py
frontend/: package-lock.json  package-test.json  package.json
frontend/app/: page.module.css  page.tsx
frontend/app/components/: Chat.module.css  SSEChat.tsx  WebSocketChat.tsx  utils.tsx
frontend/tests/: multi-user-chat.js  playwright-chat-test.spec.ts  simple-chat-test.js  visual-chat-demo.js
